add link repository

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="icon" href="./assets/2237426.svg">
- <title>-Aluraflix</title>
+ <title>Aluraflix</title>
  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -19,6 +19,7 @@
  </a>
  <div class="movie-container">
  </div>
+ <p>Este proyecto fue diseñado para el reto de inmersiónDev de Alura Latam, para ver el repositorio hacer click <a href="https://github.com/Natsumychan/inmersionDev-AluraFlix" class="link-github">aquí</a></p>
  <script src="./index.js"></script>
 </body>
 </html>
